[package]
name = "wdk-udp-socket"
version = "0.1.0"
edition = "2021"

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[dependencies]
wdk = { git = "https://github.com/GameGuyThrowaway/windows-drivers-rs.git", branch = "ferrum" }
wdk-sys = { git = "https://github.com/GameGuyThrowaway/windows-drivers-rs.git", branch = "ferrum", features = ["network"] }
wdk-alloc = { git = "https://github.com/GameGuyThrowaway/windows-drivers-rs.git", branch = "ferrum" }

wdk-mutex = { git = "https://github.com/GameGuyThrowaway/wdk-mutex.git" }
serde = { version = "1.0.228", default-features = false, features = ["serde_derive", "alloc"] }

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
